# TP

A/: preparing.py
B/: CMakeLists.txt
C/: main.cpp  main_test.cpp  tests.h
Cmake/: CMakeLists.txt
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: main.cpp  main.h  main_test.cpp
